# storytime

./: .gitignore
api/: Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  bootstrap.py
api/app/api/: root.py  tts.py
api/app/tts/: inject.py  tts_model.py  tts_queue.py  xtts.py
api/tests/tts/: test_tts_queue.py  test_xtts.py
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  MyComponent.tsx  api.ts  index.tsx
ui/src/components/: Layout.tsx  TTSPage.tsx  UploadEpubButton.tsx
ui/src/hooks/: useAudio.tsx  useAudioBufferQueue.tsx  useTextChunker.tsx
