[tool.poetry]
name = "storytime"
version = "0.1.0"
description = "Backend API for Storytime reader"
authors = ["omegastick <isaac@poulton.dev>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.0.1"
tts = "^0.17.4"
litestar = {extras = ["standard"], version = "^2.0.1"}
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
