[tool.poetry]
name = "storytime"
version = "0.1.0"
description = "Backend API for Storytime reader"
authors = ["omegastick <isaac@poulton.dev>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.0.1"
tts = "^0.17.4"
litestar = { extras = ["standard"], version = "^2.0.1" }
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
